# cuda-accelerated-medical-image-pipeline

./: .gitignore  CMakeLists.txt  README.md
benchmarks/results/: timing_results.csv
docs/: architecture.md  optimisation_notes.md
include/: image_loader.h  image_types.h  pipeline_stage.h  timer.h
include/cpu/: gaussian_blur.h  histogram_eq.h  sobel_edge.h  threshold.h
include/gpu_naive/: sobel_edge.h  threshold.h
src/common/: image_loader.cpp  timer.cu
src/cpu/: gaussian_blur.cpp  histogram_eq.cpp  pipeline_cpu.cpp  sobel_edge.cpp  threshold.cpp
src/gpu_naive/: pipeline_gpu_naive.cu  sobel_edge.cu  threshold.cu  thresold.cu
